--- a/src/index.css
+++ b/src/index.css
@@ -1,153 +1,155 @@
 /* CSS Custom Properties */
 :root {
-  --white: #FFFFFF;
-  --tan-1: #FBF9F6;
-  --tan-2: #E7E2DD;
-  --tan-3: #E2D9D1;
-  --tan-4: #D3C1AE;
-  --orange: #F67F00;
-  --text-light: #968c84;
-  --text-dark: #615954;
+	--white: #ffffff;
+	--rose: #fce8e1;
+	--pink: #f6d3de;
+	--violet: #cdb0da;
+	--blue: #b2dcf3;
+	--green: #cef2e1;
+	--cream: #fffbd6;
+	--text-blue: rgb(50, 50, 250);
 }
 
-*, *:before, *:after {
-  box-sizing: border-box;
+*,
+*:before,
+*:after {
+	box-sizing: border-box;
 }
 
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-  sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background-color: var(--tan-4);
-  padding: 2vmin;
-  height: 100vh;
+	margin: 0;
+	font-family: 'Goldman', cursive;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	background-color: var(--cream);
+	padding: 2vmin;
+	height: 100vh;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+		monospace;
 }
 
 #root {
-  height: 100%;
+	height: 100%;
 }
 
 .align-ctr {
-  text-align: center;
+	text-align: center;
 }
 
 .align-rt {
-  text-align: right;
+	text-align: right;
 }
 
 .smaller {
-  font-size: smaller;
+	font-size: smaller;
 }
 
 .flex-ctr-ctr {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 .flex-col {
-  flex-direction: column;
+	flex-direction: column;
 }
 
 .flex-j-end {
-  justify-content: flex-end;
+	justify-content: flex-end;
 }
 
 .scroll-y {
-  overflow-y: scroll;
+	overflow-y: scroll;
 }
 
 .section-heading {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  background-color: var(--tan-1);
-  color: var(--text-dark);
-  border: .1vmin solid var(--tan-3);
-  border-radius: 1vmin;
-  padding: .6vmin;
-  text-align: center;
-  font-size: 2vmin;
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	background-color: var(--tan-1);
+	color: var(--text-dark);
+	border: 0.1vmin solid var(--tan-3);
+	border-radius: 1vmin;
+	padding: 0.6vmin;
+	text-align: center;
+	font-size: 2vmin;
 }
 
 .form-container {
-  padding: 3vmin;
-  background-color: var(--tan-1);
-  border: .1vmin solid var(--tan-3);
-  border-radius: 1vmin;
+	padding: 3vmin;
+	background-color: var(--tan-1);
+	border: 0.1vmin solid var(--tan-3);
+	border-radius: 1vmin;
 }
 
 p.error-message {
-  color: var(--orange);
-  text-align: center;
+	color: var(--orange);
+	text-align: center;
 }
 
 form {
-  display: grid;
-  grid-template-columns: 1fr 3fr;
-  gap: 1.25vmin;
-  color: var(--text-light);
+	display: grid;
+	grid-template-columns: 1fr 3fr;
+	gap: 1.25vmin;
+	color: var(--text-light);
 }
 
 label {
-  font-size: 2vmin;
-  display: flex;
-  align-items: center;
+	font-size: 2vmin;
+	display: flex;
+	align-items: center;
 }
 
 input {
-  padding: 1vmin;
-  font-size: 2vmin;
-  border: .1vmin solid var(--tan-3);
-  border-radius: .5vmin;
-  color: var(--text-dark);
-  background-image: none !important; /* prevent lastpass */
-  outline: none;
+	padding: 1vmin;
+	font-size: 2vmin;
+	border: 0.1vmin solid var(--tan-3);
+	border-radius: 0.5vmin;
+	color: var(--text-dark);
+	background-image: none !important; /* prevent lastpass */
+	outline: none;
 }
 
 input:focus {
-  border-color: var(--orange);
+	border-color: var(--orange);
 }
 
-button, a.button {
-  margin: 1vmin;
-  padding: 1vmin;
-  color: var(--white);
-  background-color: var(--orange);
-  font-size: 2vmin;
-  font-weight: bold;
-  text-decoration: none;
-  text-align: center;
-  border: .1vmin solid var(--tan-2);
-  border-radius: .5vmin;
-  outline: none;
-  cursor: pointer;
+button,
+a.button {
+	margin: 1vmin;
+	padding: 1vmin;
+	color: var(--white);
+	background-color: var(--orange);
+	font-size: 2vmin;
+	font-weight: bold;
+	text-decoration: none;
+	text-align: center;
+	border: 0.1vmin solid var(--tan-2);
+	border-radius: 0.5vmin;
+	outline: none;
+	cursor: pointer;
 }
 
 button.btn-sm {
-  font-size: 1.5vmin;
-  padding: .6vmin .8vmin;
+	font-size: 1.5vmin;
+	padding: 0.6vmin 0.8vmin;
 }
 
 button.btn-xs {
-  font-size: 1vmin;
-  padding: .4vmin .5vmin;
+	font-size: 1vmin;
+	padding: 0.4vmin 0.5vmin;
 }
 
-button:disabled, form:invalid button[type="submit"] {
-  cursor: not-allowed;
-  background-color: var(--tan-4);
+button:disabled,
+form:invalid button[type="submit"] {
+	cursor: not-allowed;
+	background-color: var(--tan-4);
 }
 
 button[type="submit"] {
-  grid-column: span 2;
-  margin: 1vmin 0 0;
+	grid-column: span 2;
+	margin: 1vmin 0 0;
 }
