--- a/src/index.css
+++ b/src/index.css
@@ -42,6 +42,7 @@ code {
 
 .align-rt {
 	text-align: right;
+	padding-right: 155px;
 }
 
 .smaller {
@@ -107,11 +108,12 @@ label {
 button {
 	background-color: var(--blue);
 	border-color: var(--blue);
-	height: 30px;
+	height: 35px;
 	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
 	monospace;
 	text-decoration: none;
 	color: blue;
+	cursor: pointer;
 }
 
 .button {
