--- a/src/index.css
+++ b/src/index.css
@@ -121,3 +121,11 @@ button {
 	margin-top: 50px;;
 	text-decoration: none;
 }
+
+.skills {
+	background-color: var(--pink) !important;
+	left: 0;
+	right: 0;
+	display: grid;
+	padding: 60px;
+}
