--- a/src/index.css
+++ b/src/index.css
@@ -129,3 +129,21 @@ button {
 	display: grid;
 	padding: 60px !important;
 }
+
+.navbar {
+	background-color: var(--blue) !important;
+	position: fixed !important;
+	text-align: center !important;
+	align-items: center !important;
+	width: 100% !important;
+	padding: 30px !important;
+	top: 0 !important;
+	right: 0 !important;
+	font-size: 20px !important;
+};
+
+.about-text {
+	padding-top: 90px !important;
+	padding-right: 130px !important;
+}
+
