updating css issues with gh pages

--- a/src/index.css
+++ b/src/index.css
@@ -142,11 +142,9 @@ button {
 	font-size: 20px !important;
 };
 
-.photo {
-	height: 300px;
-	width: 300px;
-	border-radius: 50% !important;
-	margin-left: 100px !important;
+.work-img {
+	height: 50%;
+	width: 50%;
+	border-radius: 5px;
 }
-
 
