--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,8 +1,8 @@
 .photo {
 	height: 300px;
 	width: 300px;
-	border-radius: 50% !important;
-	margin-left: 100px !important;
+	border-radius: 50%;
+	margin-left: 100px;
 }
 
 .container {
