--- a/src/pages/App/App.css
+++ b/src/pages/App/App.css
@@ -5,3 +5,10 @@
 main {
 	left: 0;
 }
+
+.photo {
+	height: 300px;
+	width: 300px;
+	border-radius: 50% !important;
+	margin-left: 100px !important;
+}
