--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,5 +1,5 @@
 .photo {
-	height: 300px;
+	height: 300px; 
 	width: 300px;
 	border-radius: 50%;
 	margin-left: 100px;
@@ -12,10 +12,23 @@
 .col {
 	float: left;
 	width: 50%;
-	padding: 30px;
+	padding-bottom: 30px;
 }
 
 .about-text {
 	padding-top: 135px;
-	padding-right: 130px;
+	padding-right: 90px;
+}
+
+@media (max-width: 800px) {
+	.photo {
+		max-height: 50vmin;
+		max-width: 50vmin;
+		margin-left: 0;
+	}
+
+	.about-text {
+		padding-top: 100px;
+		padding-right: 35px;
+	}
 }
