--- a/src/components/Skills/Skills.css
+++ b/src/components/Skills/Skills.css
@@ -34,3 +34,21 @@ i {
 	color: white;
 	border-radius: 10px;
 }
+
+@media (max-width: 800px) {
+	.column {
+		width: 25%;
+		padding-left: 0;
+	}
+}
+
+@media (max-width: 600px) {
+	.icon {
+		height: 25%;
+		width: 25%;
+	}
+	.column {
+		width: 33%;
+		padding-left: 0;
+	}
+}
