--- a/src/index.css
+++ b/src/index.css
@@ -149,3 +149,10 @@ button {
 	border-radius: 5px;
 }
 
+.photo {
+	height: 300px; 
+	width: 300px;
+	border-radius: 50%;
+	margin-left: 100px;
+}
+
