--- a/src/components/Work/Work.css
+++ b/src/components/Work/Work.css
@@ -1,44 +1,34 @@
+/* Work Page */
 .work {
 	background-color: var(--green);
 	padding: 60px;
 	width: 100%;
 }
 
-.cols {
-	float: left;
-	width: 50%;
-	padding: 35px;
-	justify-content: center;
-	align-items: center;
-	display: block;
-}
 
+/* Page title */
 .title {
 	color: var(--violet);
 	font-size: 25px;
 	margin: 0;
 }
 
+
+/* Screenshots */
 .work-img {
-	height: 50%;
-	width: 50%;
-	border-radius: 5px;
+	height: 100%;
+	width: 100%;
+	border-radius: 10px;
+	min-height: 50px;
+	min-width: 50px;
 }
 
 img:hover {
 	opacity: 70%;
 }
 
-.img-right {
-	float: right;
 
-}
-
-.img-left {
-	float: left;
-	margin-right: 55px;
-}
-
+/* Dev-icons */
 .small-icon {
 	font-size: 30px;
 }
@@ -47,38 +37,107 @@ i {
 	margin-left: 5px;
 }
 
-.btn-right {
-	float: right;
-	margin-right: 50px;
-}
 
+/* Links */
 .btn-block {
 	display: grid;
-	float: right;
-	padding-right: 50px;
+	padding-right: 30px;
 }
 
+
+/* Line Breaks */
+hr {
+	width: 100%;
+	margin-top: 50px;
+	margin-bottom: 30px;
+}
+
+
+/* ----CONTAINERS---- */
+/* TackTrunk, CarCollector */
+.work-container-1 {
+	display: grid;
+	grid-template-columns: repeat(4, 1fr);
+	grid-template-rows: repeat (3, 150px);
+	grid-gap: 10px;
+}
+
+.title-1, .about-1, .built-1 {
+	grid-column: 1 / 3;
+}
+
+.img-1 {
+	grid-column: 4 / 5;
+	grid-row: 1 / 4;
+	
+}
+
+.links-1 {
+	grid-column: 3 / 4;
+	grid-row: 2 / 4;
+	width: 100%;
+	justify-items: end;
+}
+
+
+/* Vines, Travel */
+.work-container-2 {
+	display: grid;
+	grid-template-columns: repeat(4, 1fr);
+	grid-template-rows: repeat (3, 150px);
+	grid-gap: 10px;
+}
+
+.title-2, .about-2, .built-2 {
+	grid-column: 3 / 5;
+	text-align: end;
+}
+
+.img-2 {
+	grid-column: 1 / 2;
+	grid-row: 1 / 4;
+	margin: 10px;
+}
+
+.links-2 {
+	grid-column: 2 / 3;
+	grid-row: 2 / 4;
+	width: 100%;
+	justify-content: center;
+}
+
+
 @media (max-width: 800px) {
-	.work-img {
-		height: 100%;
-		width: 100%;
-	}
-	p {
-		position: inherit;
+	/* ----CONTAINERS---- */
+	/* TackTrunk, CarCollector */
+	.work-container-1 {
+		display: grid;
+		grid-template-columns: 100%;
+		grid-template-rows: repeat (6, 150px);
+		grid-gap: 10px;
 	}
 
-	.cols {
+	.title-1 {
+		grid-row: 1 / 2;
+	}
+
+	.about-1 {
+		grid-row: 2 / 3;
+	}
+
+	.built-1 {
+		grid-row: 4 / 5;
+	}
+
+	.img-1 {
+		grid-row: 3 / 4;
 		width: 100%;
+		height: 100%;
+		
 	}
-	.img-left {
-		float: left;
-		margin-right: 55px;
+
+	.links-1 {
+		grid-row: 5 / 6;
 	}
-	.align-rt {
-		text-align: left;
-	}
-	a {
-		align-items: center;
-		text-align: center;
-	}
+
 }
