--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,37 +1,50 @@
+.about-container {
+	display: grid;
+	grid-template-columns: 50% 50%;
+	grid-template-rows: repeat(2 auto);
+
+}
+
 .about-photo {
 	border-radius: 50%;
-	margin-left: 100px;
-}
-
-.container {
-	display: grid;
-}
-
-.col {
-	float: left;
-	width: 50%;
+	grid-column: 1 / 2;
+	grid-row: 2 / 3;
+	display: flex;
+	justify-content: center;
+	margin: 0 auto;
 	padding-bottom: 30px;
 }
 
 .about-text {
-	padding-top: 135px;
-	padding-right: 90px;
+	grid-column: 2 / 3;
 	text-align: right;
+	grid-row: 2 / 3;
+	padding-right: 60px;
 }
 
 .row-about {
 	padding-left: 60px;
+	grid-row-start: 1;
 }
 
 @media (max-width: 800px) {
-	.about-photo {
-		max-height: 50vmin;
-		max-width: 50vmin;
-		margin-left: 0;
+	.about-container {
+		display: grid;
+		grid-template-columns: 100%;
+		grid-template-rows: repeat(2 auto);
 	}
-
 	.about-text {
-		padding-top: 100px;
-		padding-right: 35px;
+		grid-column: 1 / 2;
+		padding-bottom: 20px;
+		text-align: center;
+		grid-row: 3 / 4;
+		margin: 5px;
+		padding-right: 0px;
+	}
+	.about-photo {
+		grid-row: 2 / 3;
+	}
+	.row-about {
+		grid-row: 1 / 2;
 	}
 }
