--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,4 +1,4 @@
-.navbar {
+.nav-bar {
 	background-color: var(--blue);
 	position: fixed;
 	text-align: center;
@@ -10,3 +10,8 @@
 	font-size: 20px;
 };
 
+@media (max-width: 500px) {
+	.nav-bar {
+		padding: 10px;
+	}
+}
