--- a/src/components/Work/Work.css
+++ b/src/components/Work/Work.css
@@ -3,6 +3,8 @@
 	background-color: var(--green);
 	padding: 60px;
 	width: 100%;
+	margin-left: 0;
+    margin-right: 10px;
 }
 
 
@@ -16,7 +18,7 @@
 
 /* Screenshots */
 .work-img {
-	height: 100%;
+	/* height: 100%; */
 	width: 100%;
 	border-radius: 10px;
 	min-height: 50px;
@@ -113,7 +115,7 @@ hr {
 }
 
 
-@media (max-width: 800px) {
+@media (max-width: 1000px) {
 	/* ----CONTAINERS---- */
 	/* TackTrunk, CarCollector, Minesweeper, Vines, Travell*/
 	.work-container-1, .work-container-2 {
@@ -144,6 +146,7 @@ hr {
 		grid-column: 1 / 2;
 		grid-row: 4 / 5;
 		width: 50%;
+		/* max-height: 80%; */
 		justify-items: center;
 		
 	}
