--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -21,6 +21,8 @@
 	text-align: right;
 	grid-row: 2 / 3;
 	padding-right: 60px;
+	font-size: 1.5vw;
+	padding-bottom: 10px;
 }
 
 .row-about {
@@ -28,7 +30,7 @@
 	grid-row-start: 1;
 }
 
-@media (max-width: 800px) {
+@media (max-width: 900px) {
 	.about-container {
 		display: grid;
 		grid-template-columns: 100%;
@@ -39,13 +41,20 @@
 		padding-bottom: 20px;
 		text-align: center;
 		grid-row: 3 / 4;
-		margin: 5px;
+		margin: 15px;
 		padding-right: 0px;
+		font-size: 2vw;
 	}
 	.about-photo {
 		grid-row: 2 / 3;
 	}
 	.row-about {
 		grid-row: 1 / 2;
+	}
+}
+
+@media (min-width: 1350px) {
+	.about-text {
+		font-size: 20px;
 	}
 }
