--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -3,9 +3,13 @@
 	padding: 60px;
 	display: grid;
 	grid-template-columns: repeat(3 auto);
-	grid-template-rows: 50px 150px 50px;
+	grid-template-rows: 100px 150px 50px;
 	grid-gap: 20px;
 
+}
+.contact-title {
+	grid-column: 1 / 4;
+	grid-row: 1 / 2;
 }
 
 .linkedin {
