--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -2,6 +2,7 @@
 	display: grid;
 	grid-template-columns: 50% 50%;
 	grid-template-rows: repeat(2 auto);
+	padding: 60px;
 
 }
 
@@ -20,13 +21,10 @@
 	grid-column: 2 / 3;
 	text-align: right;
 	grid-row: 2 / 3;
-	padding-right: 60px;
-	font-size: 1.5vw;
-	padding-bottom: 10px;
+	font-size: 16px;
 }
 
 .row-about {
-	padding-left: 60px;
 	grid-row-start: 1;
 }
 
@@ -38,12 +36,8 @@
 	}
 	.about-text {
 		grid-column: 1 / 2;
-		padding-bottom: 20px;
 		text-align: center;
 		grid-row: 3 / 4;
-		margin: 15px;
-		padding-right: 0px;
-		font-size: 2vw;
 	}
 	.about-photo {
 		grid-row: 2 / 3;
