--- a/src/components/Skills/Skills.css
+++ b/src/components/Skills/Skills.css
@@ -1,17 +1,25 @@
 .skills {
 	background-color: var(--pink) !important;
-	left: 0;
-	right: 0;
 	display: grid;
+	grid-template-columns: 5(repeat auto);
+	grid-template-rows: 4(repeat 150px);
+	row-gap: 20px;
 	padding: 60px;
-	/* position: relative; */
-	width: 100%;
-	justify-content: space-evenly;
+}
+
+.skills-title {
+	grid-row: 1 /2;
+	grid-column: span 5;
 }
 
 .icon {
-	height: 100px;
-	width: 100px;
+	height: 150px;
+	width: 150px;
+	justify-self: center;
+}
+
+.icon-name {
+	text-align: center;
 }
 
 i {
@@ -20,15 +28,13 @@ i {
 	color: var(--pink);
 	border-radius: 10px;
 	border: white solid 2px;
+	align-items: center;
 }
 
-.column {
-	float: left;
-	width: 20%;
-	padding: 30px;
-	display: flex;
-	justify-content: center;
+.devicon {
+	margin-left: 25px;
 }
+
 
 .opposite {
 	background-color: var(--pink);
@@ -36,23 +42,65 @@ i {
 	border-radius: 10px;
 }
 
-@media (max-width: 800px) {
-	.column {
-		width: 25%;
-		padding-left: 0;
+/* Grid icons */
+.icon-1, .icon-2, .icon-3, .icon-4, .icon-5 {
+	grid-row: 2 / 3;
+	
+}
+.icon-6, .icon-7, .icon-8, .icon-9, .icon-10 {
+	grid-row: 3 / 4;
+}
+.icon-11, .icon-12, .icon-13, .icon-14, .icon-15 {
+	grid-row: 4 / 5;
+}
+
+@media (max-width: 900px) {
+	.skills {
+		grid-template-columns: 4(repeat auto);
+	}
+	.skills-title {
+		grid-column: span 4;
+	}
+	.icon-1, .icon-2, .icon-3, .icon-4 {
+		grid-row: 2 / 3;	
+	}
+	.icon-5, .icon-6, .icon-7, .icon-8 {
+		grid-row: 3 / 4;
+	}
+	.icon-9, .icon-10, .icon-11, .icon-12 {
+		grid-row: 4 / 5;
+	}
+	.icon-13, .icon-14, .icon-15 {
+		grid-row: 5 / 6;
 	}
 }
 
-@media (max-width: 600px) {
-	.icon {
-		height: 25%;
-		width: 25%;
+@media (max-width: 750px) {
+	.skills {
+		grid-template-columns: 3(repeat auto);
 	}
-	.column {
-		width: 33%;
-		padding-left: 0;
+	.skills-title {
+		grid-column: span 3;
 	}
-	.row {
-		padding-left: 0px;
+	.icon-1, .icon-2, .icon-3 {
+		grid-row: 2 / 3;	
+	}
+	.icon-4, .icon-5, .icon-6 {
+		grid-row: 3 / 4;
+	}
+	.icon-7, .icon-8, .icon-9, .icon-10, .icon-11, .icon-12 {
+		grid-row: 4 / 5;
+	}
+	.icon-10, .icon-11, .icon-12 {
+		grid-row: 5 / 6;
+	}
+	.icon-13, .icon-14, .icon-15 {
+		grid-row: 6 / 7;
+	}
+}
+
+@media (max-width: 300px) {
+	.skills {
+		grid-template-columns: 2(repeat auto);
 	}
 }
