--- a/src/components/Work/Work.css
+++ b/src/components/Work/Work.css
@@ -11,7 +11,7 @@
 /* Page title */
 .title {
 	color: var(--violet);
-	font-size: 2.3vw;
+	font-size: 20px;
 	margin: 0;
 }
 
@@ -25,14 +25,9 @@
 	min-width: 50px;
 }
 
-/* img:hover {
-	opacity: 70%;
-} */
-
-
 /* Dev-icons */
 .small-icon {
-	font-size: 4vw;
+	font-size: 50px;
 }
 
 i {
@@ -55,9 +50,13 @@ hr {
 }
 
 .about-1, .about-2 {
-	font-size: 1.5vw;
+	font-size: 16px;
 }
 
+a {
+	display: contents;
+	justify-content: space-around;
+}
 
 /* ----CONTAINERS---- */
 /* TackTrunk, CarCollector */
@@ -80,9 +79,11 @@ hr {
 
 .links-1 {
 	grid-column: 3 / 4;
-	grid-row: 2 / 4;
+	grid-row: 2 / 3;
 	width: 100%;
 	justify-items: end;
+	align-items: center;
+	text-align: end;
 }
 
 
@@ -107,9 +108,10 @@ hr {
 
 .links-2 {
 	grid-column: 2 / 3;
-	grid-row: 2 / 4;
+	grid-row: 2 / 3;
 	width: 100%;
 	justify-content: center;
+	align-items: center;
 }
 
 @media (max-width: 1000px) {
@@ -140,7 +142,6 @@ hr {
 		grid-row: 2 / 3;
 		text-align: center;
 		grid-column: 1 / 2;
-		font-size: 1.8vw;
 	}
 
 	.built-1, .built-2 {
@@ -153,7 +154,6 @@ hr {
 		grid-column: 1 / 2;
 		grid-row: 4 / 5;
 		width: 50%;
-		/* max-height: 80%; */
 		justify-items: center;
 		
 	}
@@ -165,10 +165,4 @@ hr {
 		padding-top: 20px;
 	}
 	
-}
-
-@media (min-width: 1400px) {
-	.about-1, .about-2 {
-		font-size: 1.3vw;
-	}
 }
