--- a/src/components/Work/Work.css
+++ b/src/components/Work/Work.css
@@ -10,7 +10,7 @@
 
 /* Page title */
 .title {
-	color: var(--violet);
+	color: black;
 	font-size: 20px;
 	margin: 0;
 }
@@ -69,6 +69,7 @@ a {
 
 .title-1, .about-1, .built-1 {
 	grid-column: 1 / 3;
+	text-align: center;
 }
 
 .img-1 {
@@ -99,6 +100,7 @@ a {
 .title-2, .about-2, .built-2 {
 	grid-column: 3 / 5;
 	text-align: end;
+	text-align: center;
 }
 
 .img-2 {
