updated css for button and layout

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -2,7 +2,7 @@
 	display: grid;
 	grid-template-columns: 50% 50%;
 	grid-template-rows: repeat(2 auto);
-	padding: 60px;
+	padding: 10px 10% 0 10%;
 	padding-top: 0px;
 
 }
