--- a/src/components/Work/Work.css
+++ b/src/components/Work/Work.css
@@ -1,12 +1,11 @@
 /* Work Page */
 .work {
 	background-color: var(--green);
-	padding: 60px;
+	padding: 10px 10% 0 10%;
 	width: 100%;
 	margin-left: 0;
-    margin-right: 10px;
+	margin-right: 10px;
 }
-
 
 /* Page title */
 .title {
@@ -15,36 +14,25 @@
 	margin: 0;
 }
 
-
 /* Screenshots */
 .work-img {
-	/* height: 100%; */
 	width: 100%;
-	border-radius: 10px;
 	min-height: 50px;
 	min-width: 50px;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
 .work-img:hover {
-	
 }
 
 /* Dev-icons */
 .small-icon {
-	font-size: 50px;
+	font-size: 45px;
 }
 
 i {
 	margin-left: 5px;
 }
-
-
-/* Links */
-.btn-block {
-	display: grid;
-	padding-right: 30px;
-}
-
 
 /* Line Breaks */
 hr {
@@ -53,123 +41,186 @@ hr {
 	margin-bottom: 30px;
 }
 
-.about-1, .about-2 {
+.about-1,
+.about-2 {
 	font-size: 16px;
 }
 
-a {
-	display: contents;
-	justify-content: space-around;
+.btn {
+	color: black;
+	transition: all 0.5s;
+	position: relative;
+	padding: 16px 35px 16px 35px;
+	margin-top: 10px;
+	z-index: 1;
+  text-decoration: none;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+}
+.btn span {
+	z-index: 2;
+	display: block;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+}
+.btn:hover {
+  box-shadow: none;
+}
+.btn::before {
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 1;
+	transition: all 0.5s;
+	border: 1px solid var(--pink);
+	background-color: #f6d3de67;
+}
+.btn::after {
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: -1;
+	transition: all 0.5s;
+	border: 1px solid #f6d3de;
+	background-color: #f6d3dea3;
+}
+.btn:hover::before {
+	transform: rotate(-45deg);
+	background-color: #fce8e173;
+}
+.btn:hover::after {
+	transform: rotate(45deg);
+	background-color: #f6d3de67;
 }
 
 /* ----CONTAINERS---- */
 /* TackTrunk, CarCollector */
 .work-container-1 {
 	display: grid;
-	grid-template-columns: repeat(4, 1fr);
-	grid-template-rows: repeat (3, 150px);
-	grid-gap: 10px;
+	grid-template-columns: repeat(3, 1fr);
+	grid-template-rows: 25px auto auto 100px;
+	column-gap: 30px;
 }
 
-.title-1, .about-1, .built-1 {
+.title-1,
+.about-1,
+.built-1 {
 	grid-column: 1 / 3;
-	text-align: center;
 }
 
 .img-1 {
-	grid-column: 4 / 5;
-	grid-row: 1 / 4;
+	grid-column: 3 / 4;
+	grid-row: 2 / 5;
 	margin: 10px;
-	
+	max-width: 400px;
+	justify-self: end;
 }
 
 .links-1 {
-	grid-column: 3 / 4;
-	grid-row: 2 / 3;
-	width: 100%;
-	justify-items: end;
-	align-items: center;
-	text-align: end;
+	grid-column: 1 / 3;
+	grid-row: 4 / 5;
+	align-self: center;
 }
 
+.link-2 {
+	margin-left: 20px;
+}
 
 /* Vines, Travel */
 .work-container-2 {
 	display: grid;
-	grid-template-columns: repeat(4, 1fr);
-	grid-template-rows: repeat (3, 150px);
-	grid-gap: 10px;
+	grid-template-columns: repeat(3, 1fr);
+	grid-template-rows: 25px auto auto 100px;
+	column-gap: 30px;
 }
 
-.title-2, .about-2, .built-2 {
-	grid-column: 3 / 5;
+.title-2,
+.about-2,
+.built-2 {
+	grid-column: 2 / 4;
 	text-align: end;
-	text-align: center;
 }
 
 .img-2 {
 	grid-column: 1 / 2;
-	grid-row: 1 / 4;
+	grid-row: 2 / 5;
 	margin: 10px;
+  max-width: 400px;
 }
 
 .links-2 {
-	grid-column: 2 / 3;
-	grid-row: 2 / 3;
+	grid-column: 2 / 4;
+	grid-row: 4 / 5;
 	width: 100%;
-	justify-content: center;
-	align-items: center;
-}
-
-@media (max-width: 1000px) {
-	.links-1 {
-		flex-wrap: wrap;
-	}
+	justify-content: end;
+	text-align: end;
+  align-self: center;
 }
 
 
 @media (max-width: 1000px) {
+
 	/* ----CONTAINERS---- */
 	/* TackTrunk, CarCollector, Minesweeper, Vines, Travell*/
-	.work-container-1, .work-container-2 {
+
+	.img-1 {
+		justify-self: center;
+	}
+	.work-container-1,
+	.work-container-2 {
 		display: grid;
 		grid-template-columns: 100%;
 		grid-template-rows: repeat(6 auto);
-		grid-gap: 10px;
 		justify-items: center;
 	}
 
-	.title-1, .title-2 {
+	.title-1,
+	.title-2 {
 		grid-row: 1 / 2;
 		grid-column: 1 / 2;
 		font-size: 3vw;
 	}
 
-	.about-1, .about-2 {
+	.about-1,
+	.about-2 {
 		grid-row: 2 / 3;
 		text-align: center;
 		grid-column: 1 / 2;
 	}
 
-	.built-1, .built-2 {
+	.built-1,
+	.built-2 {
+		text-align: center;
 		grid-row: 3 / 4;
 		grid-column: 1 / 2;
-		
 	}
 
-	.img-1, .img-2 {
-		grid-column: 1 / 2;
-		grid-row: 4 / 5;
-		width: 50%;
-		justify-items: center;
-		
-	}
-
-	.links-1, .links-2 {
+	.img-1,
+	.img-2 {
 		grid-column: 1 / 2;
 		grid-row: 5 / 6;
+		width: 40%;
 		justify-items: center;
-		padding-top: 20px;
+    margin-top: 20px;
 	}
-	
+
+	.links-1,
+	.links-2 {
+		grid-column: 1 / 2;
+		grid-row: 4 / 5;
+		justify-items: center;
+		text-align: center;
+	}
+}
+
+@media (min-width: 1400px) {
+  .work {
+    /* padding: 150px; */
+  }
 }
