--- a/src/components/Work/Work.css
+++ b/src/components/Work/Work.css
@@ -20,9 +20,7 @@
 	min-height: 50px;
 	min-width: 50px;
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-}
-
-.work-img:hover {
+	border-radius: 5px;
 }
 
 /* Dev-icons */
@@ -151,7 +149,7 @@ hr {
 	grid-column: 1 / 2;
 	grid-row: 2 / 5;
 	margin: 10px;
-  max-width: 400px;
+  	max-width: 400px;
 }
 
 .links-2 {
