--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
 	--pink: #f6d3de;
 	--violet: #cdb0da;
 	--blue: #b2dcf3;
+	--lightblue: #d1edfc;
 	--green: #cef2e1;
 	--cream: #fffbd6;
 	--text-blue: rgb(50, 50, 250);
