--- a/src/pages/App/App.css
+++ b/src/pages/App/App.css
@@ -23,7 +23,7 @@ h2 {
 	height: 70px;
 }
 .work-contact {
-	background: linear-gradient(0deg,#fce8e1, #cef2e1 );
+	background: linear-gradient(0deg,#fce8e1, #d1edfc );
 	height: 70px;
 }
 
