--- a/src/components/Work/Work.css
+++ b/src/components/Work/Work.css
@@ -25,6 +25,7 @@
 }
 
 .work-school-gradient {
+  width: 100%;
   height: 60px;
   background: linear-gradient(
     to bottom,
@@ -102,10 +103,7 @@
 
 .school {
   background-color: var(--lightblue);
-  padding: 40px 10% 40px 10%;
-  width: 100%;
-  margin-left: 0;
-  margin-right: 10px;
+  padding: 3rem 1.5rem 3rem;
 }
 .projects-grid {
   display: grid;
